Commit inicial Lab3

--- a/acercade.html
+++ b/acercade.html
@@ -19,6 +19,7 @@
             <a href="#rl">Laboral</a>
             <a href="#fp">Formacion</a>
             <a href="#po">Pasatiempos</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
     </aside>
     <main class="main_container">        
@@ -26,7 +27,7 @@
             <article>
                 <div class="article_container">
                 <i class="material-icons">chevron_right</i>
-                <h2 id="rl">Referencias laborales</h3>
+                <h2 id="rl">Referencias laborales</h2>
                 <ul>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, placeat iure.</li>
@@ -42,7 +43,7 @@
             <article>
                 <div class="article_container">
                 <i class="material-icons">chevron_right</i>
-                <h2 id="fp">Formacion profesional</h3>
+                <h2 id="fp">Formacion profesional</h2>
                 <ul>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, placeat iure.</li>
@@ -54,7 +55,7 @@
             <article>
                 <div class="article_container">
                 <i class="material-icons">chevron_right</i>
-                <h2 id="po">Pasatiempos y otras cosas</h3>
+                <h2 id="po">Pasatiempos y otras cosas</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus blanditiis iusto modi repudiandae assumenda ipsam fugiat deserunt, reprehenderit libero cumque. Obcaecati quasi voluptates, saepe nostrum dolore facere adipisci aliquid perspiciatis!</p>                
                 </div>
             </article>
