--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <a href="acercade.html">Referencias personales</a>
         <a href="https://pedco.uncoma.edu.ar" target="_blank">Ir a PEDCO</a>
         <a href="https://web.curza.uncoma.edu.ar/" target="_blank">Ir a CURZA</a>
-        <a href="https://uncoma-curza-lab.github.io/PEyLW-2024/" target="_blank">Ir a PEyLW-2024</a>
+        <a href="contacto.html">Contacto</a>
+        <!-- <a href="https://uncoma-curza-lab.github.io/PEyLW-2024/" target="_blank">Ir a PEyLW-2024</a> -->
     </nav>
     <main class="main_container">
         <section>
